fix: sticky background module on mobile

--- a/components/stickyBackground/stickyBackground.module.css
+++ b/components/stickyBackground/stickyBackground.module.css
@@ -33,6 +33,28 @@
   .worldwide{
     font-size: 64px;
   }
+  .brMobile{
+    display: none;
+  }
+  @media(max-width:768px){
+    .success{
+      font-size: 30px;
+      font-weight: 400;
+      line-height: 45px;
+      width: 90%;
+    }
+    .brMobile{
+      display: block;
+    }
+    .worldwide{
+      font-size: 50px;
+    }
+    .background{
+    background-image: url(../../public/assets/imgs/mobilestickybg.png);
+    background-size: cover;
+    background-position: center;
+    }
+  }
   
   
   
